--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -2249,6 +2249,34 @@
   address = {New York, NY, USA}
 }
 
+@inproceedings{Cooper92,
+  author={Cooper, Keith D and Hall, Mary W. and Kennedy, Ken}, 
+  booktitle={Computer Languages, 1992., Proceedings of the 1992 International Conference on}, 
+  title={{Procedure Cloning}}, 
+  year={1992}, 
+  pages={96-105}, 
+  keywords={computational complexity;parallel programming;program compilers;software reusability;subroutines;code size;compiler;complexity;forward interprocedural data-flow solutions;interprocedural optimization;procedure bodies;procedure cloning;running time;specialized copies;three-phase algorithm;Algorithm design and analysis;Cloning;Computer science;Data analysis;Degradation;Optimizing compilers;Program processors;Runtime}, 
+  doi={10.1109/ICCL.1992.185472}, 
+  month={Apr}
+}
+
+@inproceedings{Santos13,
+  author = {Santos, Henrique Nazare and Alves, Pericles and Costa, Igor and Quintao Pereira, Fernando Magno},
+  title = {{Just-in-Time Value Specialization}},
+  booktitle = {Proceedings of the 2013 IEEE/ACM International Symposium on Code Generation and Optimization (CGO)},
+  series = {CGO '13},
+  year = {2013},
+  isbn = {978-1-4673-5524-7},
+  pages = {1--11},
+  numpages = {11},
+  url = {http://dx.doi.org/10.1109/CGO.2013.6495006},
+  doi = {10.1109/CGO.2013.6495006},
+  acmid = {2495933},
+  publisher = {IEEE Computer Society},
+  address = {Washington, DC, USA},
+  keywords = {Speculation,JIT,compilation,JavaScript}
+}
+
 %% MISC (URLs)
 @misc{perf,
   author = {{perf: {Linux} profiling with performance counters}},
