--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -302,7 +302,7 @@
   Author = {Demetrescu, Camil and Finocchi, Irene},
   Booktitle = {Handbook of Applied Algorithms: Solving Scientific, Engineering, and Practical Problems},
   Editors = {A. Nayak and I. Stojmenovic (eds)},
-  Publisher = {John Wiley and Sons},
+  Publisher = {John Wiley \& Sons},
   Title = {{Algorithms for Data Streams}},
   Volume = {241},
   Year = {2007}
@@ -364,7 +364,7 @@
   Number = {11},
   Numpages = {15},
   Pages = {1533--1547},
-  Publisher = {John Wiley and Sons Ltd.},
+  Publisher = {John Wiley \& Sons Ltd.},
   Title = {{Incremental Call-Path Profiling}},
   Volume = {19},
   Year = {2007}
@@ -1953,6 +1953,14 @@
   year = {2016}
 }
 
+@inproceedings{ChevalierBoisvert16,
+  author = {Maxime Chevalier{-}Boisvert and Marc Feeley},
+  title = {{Interprocedural Type Specialization of JavaScript Programs Without Type Analysis}},
+  booktitle = {Proceedings of the 30th European conference on Object-Oriented Programming},  
+  series = {ECOOOP '16},
+  year = {2016}
+}
+
 @article{Weiser82,
   author = {Weiser, Mark},
   title = {{Programmers Use Slices when Debugging}},
@@ -2184,7 +2192,7 @@
 
 @inproceedings{ChevalierBoisvert15,
   author = {Maxime Chevalier{-}Boisvert and Marc Feeley},
-  title = {Simple and Effective Type Check Removal through Lazy Basic Block Versioning},
+  title = {{Simple and Effective Type Check Removal through Lazy Basic Block Versioning}},
   booktitle = {29th European Conference on Object-Oriented Programming, {ECOOP} 2015, July 5-10, 2015, Prague, Czech Republic},
   pages = {101--123},
   year = {2015},
@@ -2275,6 +2283,36 @@
   publisher = {IEEE Computer Society},
   address = {Washington, DC, USA},
   keywords = {Speculation,JIT,compilation,JavaScript}
+}
+
+@inbook{Touati14,
+  title = {{Instruction Scheduling After Register Allocation}},  
+  author = {Touati, Sid and Dinechin, Benoit Dupont de},
+  publisher = {John Wiley \& Sons, Inc.},
+  isbn = {9781118625446},
+  url = {http://dx.doi.org/10.1002/9781118625446.ch5},
+  doi = {10.1002/9781118625446.ch5},
+  pages = {77--90},
+  keywords = {inter-block scoreboard scheduling, inter-region instruction scheduling, local instruction scheduling, postpass instruction scheduling technique, register allocation},
+  booktitle = {Advanced Backend Code Optimization},
+  year = {2014}
+}
+
+@inproceedings{Choi99,
+  author = {Choi, Jong-Deok and Gupta, Manish and Serrano, Mauricio and Sreedhar, Vugranam C. and Midkiff, Sam},
+  title = {{Escape Analysis for Java}},
+  booktitle = {Proceedings of the 14th ACM SIGPLAN Conference on Object-oriented Programming, Systems, Languages, and Applications},
+  series = {OOPSLA '99},
+  year = {1999},
+  isbn = {1-58113-238-7},
+  location = {Denver, Colorado, USA},
+  pages = {1--19},
+  numpages = {19},
+  url = {http://doi.acm.org/10.1145/320384.320386},
+  doi = {10.1145/320384.320386},
+  acmid = {320386},
+  publisher = {ACM},
+  address = {New York, NY, USA}
 }
 
 %% MISC (URLs)
