--- a/state-of-art.tex
+++ b/state-of-art.tex
@@ -48,10 +48,12 @@ JIT compilation is used by modern runtime to gain the benefits of both static co
 
 \paragraph*{Partial Evaluation.} Futamura~\cite{Futamura99} proposed partial evaluation to derive compiled code from an interpreter and a program's source code, and has extensively been studied for functional languages. Partial evaluation is used in Truffle/Graal~\cite{Wurthinger13} to perform aggressive optimizations assuming that the values of some variables do not change. For the interested reader, we refer to~\cite{Marr15} for a detailed discussion of the pros and cons of tracing JIT vs. partial evaluation.
 
-\paragraph*{Basic Block Versioning.} Basic Block Versioning (BBV)~\cite{ChevalierBoisvert15} is a JIT compilation technique that generates type-specialized code for basic blocks lazily, interleaving execution and compilation as new type combinations are observed. BBV is simple to implement, can remove redundant type checks from critical code paths, and has recently been extended with simple inter-procedural optimizations. It might be thus an option for VM builders to implement a baseline JIT compiler.
+\paragraph*{Basic Block Versioning.} Basic Block Versioning (BBV)~\cite{ChevalierBoisvert15} is a JIT compilation technique that generates type-specialized code for basic blocks lazily, interleaving execution and compilation as new type combinations are observed. BBV is simple to implement, can remove redundant type checks from critical code paths, and has recently been extended with simple but effective inter-procedural optimizations~\cite{ChevalierBoisvert16}. It might be thus an option for VM builders to implement a baseline JIT compiler.
 
 \section{Feedback-Directed Optimization}
 A fully automatic online Feedback-Directed Optimization (FDO) system is the key for continuous optimization in an adaptive runtime. As highligthed in~\cite{Arnold05}, FDO has several advantages: for instance, it can overcome limitations of static optimizers by exploiting run-time information that cannot be statically inferred, and it allows the runtime to change a decision if and when conditions change.
+
+The universe of FDO techniques is relatively large. For this reason, in the remainder of this section, we will present in more details those to which the ideas presented in this thesis are more applicable, and briefly mention the others.
 
 \paragraph*{Inlining.} Replacing a call site with the code of the function it invokes is one of the most widely employed optimization techniques. Inlining can be particularly effective in the context of object-oriented languages, but performing it too aggressively would place a burden on compilation time and code bloat. The implementations of the SELF language~\cite{Holzle92,Holzle96} introduced progressively sophisticated techniques for effective dynamic inlining: in particular, they augmented inlining with type feedback based on types profiled for receivers.
 
@@ -61,17 +63,12 @@ Lessons learned from devirtualization of function calls in statically compiled o
 
 Specialization is a form of multi-versioning which speculates on run-time facts, and is thus closely related to partial evaluation. When a type inference engine cannot infer precise information for a function, type-based JIT specialization can be used to generate specialized copies of the function body~\cite{Cooper92} depending on the speculations made for each argument's type. Value-based JIT specialization~\cite{Santos13} creates specialized function bodies based on the run-time values for a subset of the arguments, and can be effective for functions that are either called only once, or repeatedly called with the same parameters.
 
-\paragraph*{Other Techniques.} The universe of FDO techniques is 
+\paragraph*{Instruction Scheduling.} Instruction scheduling techniques attempt to maximize the flow of instructions through a processor's pipeline by reordering them on the basis of observed profiles. Extensively studied in the context of static code generation for superscalar processors, instruction scheduling techniques have recently been explored for JIT compilers as well~\cite{Arnold05, Touati14}.
 
-%\section{Performance Profiling}
-%\subsection{Means for Collecting Profiling Information}
-%\subsection{Intra-Procedural Profiling Techniques}
-%\subsection{Inter-Procedural Profiling Techniques}
-%\section{Optimized Code Generation}
-%\subsection{Profile-Guided Optimization}
-%\subsection{Just-In-Time Compilation}
-%\subsubsection{On-Stack Replacement}
-%\subsubsection{Tracing JIT Compilation}
-%\subsection{Other Related Work}
+\paragraph*{Other Relevant Techniques.} Unless otherwise stated, we refer the reader to~\cite{Arnold05} for the techniques mentioned here. Polymorphic Inline Caches (PICs) can be used to perform dynamic dispatching of methods based on previously seen cases. PICs are also used by modern JavaScript engines to optimize object property access~\cite{ChevalierBoisvert16}.
 
-% Dynamic Binary Optimization, Self-Optimizing AST
+Escape analysis~\cite{Choi99} can permit stack placement of an object: it is typically enabled by other transformations, such as speculative inlining of currently monomorphic call sites, and paves the way to further optimization such as the promotion of an object's fields from memory to registers.
+
+Code positioning techniques can be used to improve branch prediction and maximize instruction-cache locality by rearranging the instructions in the code. Production VMs can also dynamically adjust the size of their heap depending on the memory allocation requests of the running application. Garbage collection is typically triggered at {\em safepoints}, at which all threads are suspended and also other tasks such as deoptimization and code cache flushing can be performed as well.
+
+% MISSING: profile-guided optimization (PGO) for statically compiled code!
