--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -2315,6 +2315,21 @@
   address = {New York, NY, USA}
 }
 
+@inproceedings{Melski99,
+  author = {Melski, David and Reps, Thomas W.},
+  title = {{Interprocedural Path Profiling}},
+  booktitle = {Proceedings of the 8th International Conference on Compiler Construction, Held As Part of the European Joint Conferences on the Theory and Practice of Software, ETAPS'99},
+  series = {CC '99},
+  year = {1999},
+  isbn = {3-540-65717-7},
+  pages = {47--62},
+  numpages = {16},
+  url = {http://dl.acm.org/citation.cfm?id=647475.727620},
+  acmid = {727620},
+  publisher = {Springer-Verlag},
+  address = {London, UK, UK}
+}
+
 %% MISC (URLs)
 @misc{perf,
   author = {{perf: {Linux} profiling with performance counters}},
