--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -953,7 +953,7 @@
   doi = {10.1109/CGO.2004.1281678}
 }
 
-@inproceedings{DElia13,
+@inproceedings{Delia13,
   author = {D'Elia, Daniele Cono and Demetrescu, Camil},
   title = {{Ball-Larus Path Profiling Across Multiple Loop Iterations}},
   booktitle = {Proceedings of the 2013 ACM SIGPLAN International Conference on Object Oriented Programming Systems Languages \&\#38; Applications},
@@ -2328,6 +2328,36 @@
   acmid = {727620},
   publisher = {Springer-Verlag},
   address = {London, UK, UK}
+}
+
+@article{Delia15,
+  author = {D'Elia, Daniele Cono and Demetrescu, Camil and Finocchi, Irene},
+  title = {{Mining Hot Calling Contexts in Small Space}},
+  journal = {Software: Practice and Experience},
+  issn = {1097-024X},
+  url = {http://dx.doi.org/10.1002/spe.2348},
+  doi = {10.1002/spe.2348},
+  pages = {n/a--n/a},
+  keywords = {performance profiling, dynamic program analysis, data streaming algorithms, frequent items, program instrumentation},
+  year = {2015}
+}
+
+@inproceedings{Delia16,
+  author = {D'Elia, Daniele Cono and Demetrescu, Camil},
+  title = {{Flexible On-stack Replacement in {LLVM}}},
+  booktitle = {Proceedings of the 2016 International Symposium on Code Generation and Optimization},
+  series = {CGO 2016},
+  year = {2016},
+  isbn = {978-1-4503-3778-6},
+  location = {Barcelona, Spain},
+  pages = {250--260},
+  numpages = {11},
+  url = {http://doi.acm.org/10.1145/2854038.2854061},
+  doi = {10.1145/2854038.2854061},
+  acmid = {2854061},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {LLVM, On-stack replacement, code optimization, deoptimization, just-in-time compilation}
 }
 
 %% MISC (URLs)
