--- a/osr-llvm.tex
+++ b/osr-llvm.tex
@@ -1,4 +1,5 @@
-\section{A New Framework for On-Stack Replacement}
+%\section{A New Framework for On-Stack Replacement}
+\section{A Flexible On-Stack Replacement Framework}
 
 Modern language runtimes dynamically adapt the execution to the actual workload, maintaining different versions of the code generated with different, often speculative, optimizations. For this reason, they typically implement on-stack replacement mechanisms to dynamically transfer execution between them {\em while} a version of the method to optimize is still running.
 
