--- a/introduction.tex
+++ b/introduction.tex
@@ -48,6 +48,8 @@ The contributions of this thesis aim at covering both methodological and practic
 
 The rest of this thesis is structured as follows. \mychapter\ref{ch:literature} reviews the state of the art in techniques for adaptive program optimization. \mychapter\ref{ch:profiling} presents our intra- and inter-procedural techniques for performance profiling, while \mychapter\ref {ch:continuous} tackles the on-stack replacement problem for enabling continuous program optimization. \mychapter\ref{ch:experiments} illustrates the results of our experimental studies. \mychapter\ref{ch:case-studies} presents examples of application of our techniques in program optimization. Conclusions and possible directions for future work are discussed in \mychapter\ref{ch:conclusions}.
 
+\paragraph*{Declaration} This thesis is a presentation of original work of its author. The work was done under the guidance of Prof. Camil Demetrescu, in conjunction with Prof. Irene Finocchi in the early stage of the doctoral program, at Sapienza University of Rome. The ideas and the results presented in this work, with the exception of \Cref{se:osr-a-la-carte,se:eval-OSR-alC,se:CS-debug} which are yet unpublished, have appeared in conference proceedings and scientific journals~\cite{Delia11,Delia13,Delia15,Delia16}.
+
 %This thesis tackles problems arising while analyzing the behavior of a running program, within and across the boundaries of a procedure, 
 %especially when the target form is directly executable on hardware. Interpreters on the other hand can 
 %Modern interpreters translate source code into an intermediate representation that is easier to work with, and can optionally perform optimizations based on the current workload.
