--- a/abstract.tex
+++ b/abstract.tex
@@ -1,3 +1,13 @@
-Adaptive optimization techniques are a key ingredient for the performance of modern runtime systems. In this thesis we present novel ideas for adaptive optimization, ranging from profiling techniques (at both intra- and inter- procedural level) based on elegant data structures, to providing support for continuous program optimization through a flexible infrastructure for On-Stack Replacement (OSR).
+Adaptive optimization technology is a key ingredient in modern runtime systems. This technology aims at improving performance by making optimizations decisions on the basis of a program's observed behavior. Indeed, application virtual machines face different and perhaps more compelling issues compared to traditional static optimizers, as dynamic language features can force the deferral of most effective optimizations till run time.
 
-We implement our ideas in production systems such as the Jikes RVM and the LLVM compiler infrastructure, and evaluate their performance against prominent benchmarks. We also present a first attempt to prove the correctness of on-stack replacement transitions, identifying sufficient conditions for their correctness and devising an algorithm for automatically generating compensation code to support OSR at arbitrary program locations in the presence of common compiler optimizations.
+In this thesis we present novel ideas to improve adaptive optimization, focusing on two main problems: collecting fine-grained program profiles with low overhead to guide feedback-directed optimization, and supporting execution transfers across continuously generated optimized code versions.
+
+In particular, we present two profiling techniques: the first works at inter-procedural level to collect calling context information for hot code portions, while the second captures cyclic path profiles within a function's boundaries. Both techniques rely on efficient and elegant data structures that allow them to be applied to practical scenarios where previous solutions failed.
+
+We then focus our attention on supporting continuous optimization through flexible on-stack replacement (OSR) mechanisms. We describe an OSR framework encoded entirely at intermediate-representation level and combines the best OSR practices with two novel features: the ability to perform OSR at any program location, and a compensation code abstraction to encode changes to the program state. We then make a first attempt to prove the correctness of OSR transitions, identifying sufficient conditions for it and devising an algorithm to automatically realign program state in the presence of common compiler optimizations.
+
+We implement our ideas in production systems such as the Jikes RVM and the LLVM compiler toolchain, and evaluate their performance against a variety of prominent benchmarks. We also investigate the end-to-end utility of our techniques by presenting three case studies: in particular, we illustrate two possible applications of multi-iteration path profiling, and show how to advance the state of the art for MATLAB code optimization and for source-level debugging of optimized code.
+
+%Adaptive optimization techniques are a key ingredient for the performance of modern runtime systems. In this thesis we present novel ideas for adaptive optimization, ranging from profiling techniques (at both intra- and inter- procedural level) based on elegant data structures, to providing support for continuous program optimization through a flexible infrastructure for On-Stack Replacement (OSR).
+
+%We implement our ideas in production systems such as the Jikes RVM and the LLVM compiler infrastructure, and evaluate their performance against prominent benchmarks. We also present a first attempt to prove the correctness of on-stack replacement transitions, identifying sufficient conditions for their correctness and devising an algorithm for automatically generating compensation code to support OSR at arbitrary program locations in the presence of common compiler optimizations.
